GeneWeb Version 2.01
--------------------

* General
  - [Apr 2, 99] Added Norwegian language.
  - [Mar 30, 99] Changed term "photo" into "image".

* GeneWeb Daemon/CGI (gwd)
  - [Apr 17, 99] Improved relationship branches displaying to be readable
    with Lynx (terminal browser without tables).
  - [Apr 16, 99] When merging persons, the lowest number is proposed by
    default.
  - [Apr 16, 99] Added long display for ancestors.
  - [Apr 13, 99] Fixed bug in personal pages: for people having a public
    name, the (small) links to the first name and surname could work
    bad in case of accents. Fixed other bug same kind: in advanced
    request, research did not work if accents were used...
  - [Apr 6, 99] Fixed bug in personal pages, titles dates were sometimes
    displayed just as "...".
  - [Apr 2, 99] Fixed bug: in missing ancestors in alphabetic order, the
    accents in surnames were incorrectly displayed.
  - [Mar 30, 99] Added the spouses when displaying relationship links with
    cousins (from the "cousin" link in personal pages).
  - [Mar 25, 99] Added the "unmarried" case for couples.
  - [Mar 23, 99] Added display of number of accesses in traces.
  - [Mar 17, 99] In person modification form, determines whether a person
    is died or not (if not specified), according to his age.
  - [Mar 16-19, 99] The presence of images in pages does not block any
    more the display of the text. For example, in welcome pages, the text
    does not wait for the displaying of the flags to be displayed, which
    is much more comfortable. (This applies only for local images).
  - [Mar 14, 99] In anniversaries, in the list of months, the selected
    month is now the current month, not always January.

* Gedcom to GeneWeb (ged2gwb)
  - [Apr 2, 99] Added the automatic computation that a person is died or
    not (if not indicated in the gedcom), according to the person's age,
    and deleted the option "-nd".
  - [Mar 31, 99] Added option "-log" to redirect output.