@@ -6,6 +6,9 @@ GeneWeb Version 2.01
   - [Mar 30, 99] Changed term "photo" into "image".
 
 * GeneWeb Daemon/CGI (gwd)
+  - [Apr 19, 99] In latest births and latest deaths displaying, the
+    dates with just the year or just the month and the year are also taken
+    into account.
   - [Apr 17, 99] Improved relationship branches displaying to be readable
     with Lynx (terminal browser without tables).
   - [Apr 16, 99] When merging persons, the lowest number is proposed by
